src/main/resources/static/styles/aboutUs.css
html, body
{
    /* document-wide styling */
    align-items: center;
    height: 100%;
}

#pageContainer
{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    background-image: url('../img/images/backgrounds/forestDarkImage.jpg');
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-size: 120% 120%;
    background-size: cover;
}

#navBar
{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    width: 100%;
    height: 6vh;
    background-color: white;
}


#contentContainer
{
    /* Align the content in the center of the page horizontally and vertically */
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
}

#footerContainer
{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    color: white;

    width: 100%;
    height: 20vh;
}

#navBar a
{
    padding: 0 13px;
    font-size: 17px;
}

#navBar .icon
{
    width: 4vh;
    height: 4vh;
    vertical-align: middle;
}

#navBar-right .icon
{
    width: 2.7vh;
    padding-bottom: 0.6vh;
}

#content
{
    margin: 5vh 15vw;
    width: 70vw;
    font-size: 24px;
    text-align: center;
    text-shadow: 0 1px 3px #000000;
}

#aboutUs
{
    width: 100%;
}

#aboutUs .title
{
    font-size: 48px;
}

#aboutUs .subTitle
{
    font-size: 32px;
}

#aboutUs section
{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    margin: 2.5vh 2.5vw;
}

#aboutUs .imageCollection
{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 34vw;
    margin: 1vh 1vw;
}

#aboutUs section img
{
    width: 34vw;
    height: 34vh;
    margin: 1vh 1vw;
}

#aboutUs section .imageCollection .image
{
    height: 30%;
    width: 30%;
    margin: 5%;
}

#aboutUs section .text
{
    width: 34vw;
    margin: 1vh 1vw;
}

#aboutUs #generalInformation
{
    display: inline-block;
}

#aboutUs #development
{
    text-align: left;
}

#aboutUs #familytrees
{
    text-align: right;
}

#aboutUs #specialRequests
{
    text-align: left;
}


.footer-row
{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#footer .icon
{
    height: 4vh;
    width: 4vh;
}

#footer .section
{
    margin: 0 2vw;
}

#footer
{
    font-size: 18px;
    text-shadow: 0 1px 3px #000000;
}

#footer .title
{
    font-size: 30px;
}

#footer-bottom
{
    font-size: 14px;
}

#footer-separator
{
    color: white;
    width: 70vw;
}

